--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     ports:
       - ${ROUTER_PORT:-8080}:${ROUTER_PORT:-8080}
       - ${DELVE_PORT:-2345}:${DELVE_PORT:-2345}
+    environment:
+      - DEBUG=${DEBUG:-false}
     volumes:
       - type: bind
         source: ./
