--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,12 +17,14 @@
         "port": 2345,
         "host": "127.0.0.1",
         "substitutePath": [
-          {
-            "from": "${workspaceFolder}",
-            "to": "/app"
-          }
+            {
+                "from": "${workspaceFolder}",
+                "to": "/app"
+            }
         ],
-        "trace": "verbose"
-      }
-    ]
+        "trace": "verbose",
+        "logOutput": "debugger",
+        "showLog": true
+    }
+  ]
 }
