--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -8,14 +8,14 @@ services:
       dockerfile: Dockerfile
     ports:
       - ${ROUTER_PORT:-8080}:${ROUTER_PORT:-8080}
+      - ${DELVE_PORT:-2345}:${DELVE_PORT:-2345}
     volumes:
       - type: bind
         source: ./
         target: /app
     environment:
       - APP_NAME=${APP_NAME:-dive-api}
-      - DEBUG=false
+      - DEBUG=true
 
 networks:
   default:
-
